# CMake

./: .gitignore  README.md
CMakeProject01/CMakeProject1/: CMakeLists.txt  CMakePresets.json  tessssssssss.txt  教程步骤.md
CMakeProject01/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  test.cpp
cmake-3.28.1-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  step.md  tutorial.cxx
cmake-3.28.1-tutorial-source/Step2/: CMakeLists.txt  step.md  tutorial.cxx
cmake-3.28.1-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
cmake-3.28.1-tutorial-source/Step3/: CMakeLists.txt  tutorial.cxx
cmake-3.28.1-tutorial-source/Step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake-3.28.1-tutorial-source/Step4/: CMakeLists.txt  tutorial.cxx
cmake-3.28.1-tutorial-source/Step5/: CMakeLists.txt
cmake-3.28.1-tutorial-source/Step5/MathFunctions/: CMakeLists.txt
